chore: regenerate translations - remove esp.csv cause es.csv

--- a/translations/ar.csv
+++ b/translations/ar.csv
@@ -44,13 +44,11 @@ Address,العنوان,
 "Address Line 2","سطر العنوان 2",
 "Administrative Expenses","مصاريف إدارية",
 All,,
-"Allow Telemetry",,
 Amount,المبلغ,
 "Amount (Company Currency)","المبلغ (عملة الشركة)",
 "Amount: ${0} and writeoff: ${1} is less than the total amount allocated to references: ${2}.","المبلغ: ${0} والشطب: $ {1} أقل من إجمالي المبلغ المخصص للمراجع: $ {2} .",
 "Amount: ${0} is less than the total amount allocated to references: ${1}.","المبلغ: ${0} أقل من إجمالي المبلغ المخصص للمراجع: $ {1} ",
 "An error occurred.","حدث خطأ",
-"Anonymized Telemetry",,
 "Application of Funds (Assets)","تطبيق الأموال (الأصول)",
 Arial,,
 "Ascending Order",,
@@ -65,7 +63,6 @@ Bank,,
 "Bank Entry",,
 "Bank Name","اسم البنك",
 "Bank Overdraft Account","حساب مصرفي السحب على المكشوف",
-"Base Error",,
 "Based On",,
 Basic,,
 "Basic I",,
@@ -81,7 +78,6 @@ Business,,
 Cancel,إلغاء,
 "Cancel ${0} ${1}?",,
 Cancelled,ملغاة,
-"Cannot Commit Error",,
 "Capital Equipments","معدات رأس المال",
 "Capital Stock","رأس المال",
 Cash,نقد,
@@ -160,7 +156,6 @@ Customise,تخصيص,
 "Customize your invoices by adding a logo and address details",,
 Dashboard,"لوحة القيادة",
 "Data Import","استيراد البيانات",
-"Database Error",,
 "Database file: ${0}",,
 Date,التاريخ,
 "Date Format","تنسيق التاريخ",
@@ -178,7 +173,6 @@ Description,الوصف,
 Details,التفاصيل,
 "Direct Expenses","المصاريف المباشرة",
 "Direct Income","الدخل المباشر",
-"Disables telemetry. No data will be collected, you are completely invisble to us.",,
 "Display Logo in Invoice","عرض الشعار في الفاتورة",
 "Display Precision","دقة العرض",
 "Display Precision should have a value between 0 and 9.","دقة العرض يجب أن تكون لها قيمة بين 0 و 9.",
@@ -186,15 +180,12 @@ Details,التفاصيل,
 Docs,,
 Documentation,التوثيق,
 "Does Not Contain","لا يحتوي",
-"Don't Log Anything",,
-"Don't Log Usage",,
 "Download Update","تنزيل التحديث",
 "Downloading update","جارٍ تنزيل التحديث",
 Dr.,,
 Draft,,
 Duplicate,,
 "Duplicate ${0} ${1}?",,
-"Duplicate Entry Error",,
 "Duties and Taxes","الرسوم والضرائب",
 "Earnest Money","كسب المال",
 Edit,تحرير,
@@ -202,8 +193,6 @@ Edit,تحرير,
 Email,"البريد الإلكتروني",
 "Email Address","عنوان البريد الإلكتروني",
 Empty,فارغ,
-"Enables telemetry. Does not include usage patterns.",,
-"Enables telemetry. Includes usage patterns.",,
 "Enter Country to load States",,
 "Enter State",,
 "Entertainment Expenses","مصاريف ترفيه",
@@ -211,7 +200,6 @@ Empty,فارغ,
 "Entry Type","نوع الإدخال",
 Equity,"حقوق الملكية",
 Error,خطأ,
-Error:,خطأ:,
 "Exchange Gain/Loss","مكاسب / خسارة الصرف",
 "Exchange Rate","سعر الصرف",
 "Excise Entry",,
@@ -221,6 +209,7 @@ Expense,المصاريف,
 Expenses,المصروفات,
 "Expenses Included In Valuation","المصروفات المدرجة في التقييم",
 Export,,
+"Export Failed",,
 "Export Successful","تم التصدير بنجاح",
 Fax,فاكس,
 Field,,
@@ -234,10 +223,8 @@ Filter," التصفية",
 "Fixed Assets","الأصول الثابتة",
 Font,الخط,
 For,"من أجل",
-"Forbidden Error",,
 Fraction,كسر,
 "Fraction Units","وحدات الكسر",
-"Frappe Books uses opt-in telemetry. This is the only way for us to know if we have any consistent users. It will be really helpful if you switch it on, but we won't force you. 🙂",,
 "Freight and Forwarding Charges","مصاريف الشحن",
 "From Account","من الحساب",
 "From Date","من تاريخ",
@@ -261,7 +248,6 @@ HSN/SAC,,
 "HSN/SAC Code",,
 "Half Yearly",,
 "Half Years",,
-"Hello there! 👋",,
 "Hex Value",,
 "Hide Get Started","إخفاء قائمة البدء",
 "Hide Group Amounts",,
@@ -285,7 +271,7 @@ Indigo,,
 "Indirect Income","الدخل غير المباشر",
 Inflow,التدفق,
 "Install Update","تثبيت التحديث",
-Inter,,
+"Instance Id",,
 "Intergrated Tax","ضريبة متكاملة",
 "Internal Precision","الدقة الداخلية",
 "Invalid value ${0} for ${1}",,
@@ -312,7 +298,6 @@ Items,العناصر,
 "Journal Entry","إدخال دفتر اليومية",
 "Journal Entry Account",,
 Kg,,
-"Know More",,
 "Label Index","فهرس التسمية",
 Language,اللغة,
 "Ledger Entries","إدخالات دفتر الأستاذ",
@@ -320,7 +305,6 @@ Language,اللغة,
 "Legal Expenses","المصاريف القانونية",
 "Less Than","أقل من",
 Liability,,
-"Link Validation Error",,
 List,,
 "Load an existing .db file from your computer.","تحميل ملف .db موجود من جهاز الكمبيوتر الخاص بك.",
 "Loading Report...",,
@@ -331,7 +315,6 @@ Locale,اللغة,
 Logo,الشعار,
 "Make Entry",,
 "Make Payment","إجراء الدفع",
-"Mandatory Error",,
 "Mar 23, 2022",,
 "Marketing Expenses","مصاريف التسويق",
 Merriweather,,
@@ -369,7 +352,6 @@ No,لا,
 "No transactions yet","لا توجد معاملات حتى الآن",
 "No updates available","لا توجد تحديثات متاحة",
 None,"لا شيء",
-"Not Found Error",,
 Notes,ملاحظات,
 "Number Series","سلسلة الأرقام",
 "Number of ${0}",,
@@ -422,7 +404,6 @@ Place,مكان,
 "Please fill all values","الرجاء ملء جميع القيم",
 "Please select a file with data to import.","الرجاء تحديد ملف به بيانات للاستيراد.",
 "Please select a valid reference type.",,
-"Please select an option:",,
 "Postal Code","الرمز البريدي",
 "Postal Expenses","المصاريف البريدية",
 "Posting Date","تاريخ النشر",
@@ -494,7 +475,6 @@ Sales,المبيعات,
 "Sales Items","عناصر المبيعات",
 "Sales Payments",,
 Save,حفظ,
-"Save Option",,
 "Save Template","حفظ النموذج",
 "Save as PDF","حفظ كملف PDF",
 "Save as PDF Successful","PDF حفظ كملف ناجح",
@@ -515,9 +495,7 @@ Select,,
 "Select folder","تحديد مجلد",
 "Select your language","اختر لغتك",
 "Selected file","الملف المحدد",
-"Send anonymized usage data and error reports to help improve the product.",,
 Service,الخدمة,
-"Set Anonymized Telemetry",,
 "Set an Import Type","تعيين نوع الاستيراد",
 "Set the display language.","ضبط لغة العرض.",
 "Set the local code. This is used for number formatting.","اضبط الكود المحلي. يستخدم هذا لتنسيق الأرقام",
@@ -628,7 +606,6 @@ Unpaid,"غير مدفوعة الأجر",
 "Update downloaded","تم تنزيل التحديث",
 "User Remark","ملاحظة المستخدم",
 "Utility Expenses","نفقات المرافق",
-"Validation Error",,
 Value,القيمة,
 "Value missing for ${0}","القيمة مفقودة لـ ${0}",
 "Verify Imported Data","التحقق من البيانات المستوردة",
