--- a/translations/ca-ES.csv
+++ b/translations/ca-ES.csv
@@ -44,13 +44,11 @@ Address,Direcció,
 "Address Line 2","Direcció línea 2",
 "Administrative Expenses","Despeses administratives",
 All,,
-"Allow Telemetry","Permetre telemetria",
 Amount,Quantitat,
 "Amount (Company Currency)","Quantitat (Moneda de la empresa)",
 "Amount: ${0} and writeoff: ${1} is less than the total amount allocated to references: ${2}.","Quantitat: ${0} i quantitat cancel·lada: ${1} és menor que la quantitat total que figura a les referències: ${2}.",
 "Amount: ${0} is less than the total amount allocated to references: ${1}.","Quantitat: ${0} és menor que la quantitat total que figura a les referències: ${1}.",
 "An error occurred.","Hi ha hagut un error.",
-"Anonymized Telemetry","Telemetria anònima",
 "Application of Funds (Assets)","Aplicació de fons (Actius)",
 Arial,,
 "Ascending Order",,
@@ -65,7 +63,6 @@ Bank,,
 "Bank Entry","Entrada bancària",
 "Bank Name","Nom del banc",
 "Bank Overdraft Account","Compte bancari d’exedents",
-"Base Error",,
 "Based On",,
 Basic,,
 "Basic I",,
@@ -81,7 +78,6 @@ Business,,
 Cancel,Cancel·la,
 "Cancel ${0} ${1}?",,
 Cancelled,Cancel·lat,
-"Cannot Commit Error",,
 "Capital Equipments","Capital Equipments",
 "Capital Stock","Capital Stock",
 Cash,Efectiu,
@@ -160,7 +156,6 @@ Customise,Personalitzar,
 "Customize your invoices by adding a logo and address details","Personalitza les teves factures afegint-hi un logotip i l'adreça",
 Dashboard,Tauler,
 "Data Import","Importar dades",
-"Database Error",,
 "Database file: ${0}",,
 Date,Data,
 "Date Format","Format de la data",
@@ -178,7 +173,6 @@ Description,Descripció,
 Details,Detalls,
 "Direct Expenses","Despeses directes",
 "Direct Income","Ingressos directes",
-"Disables telemetry. No data will be collected, you are completely invisble to us.",,
 "Display Logo in Invoice","Mostra el logotip a la factura",
 "Display Precision","Precisió de la pantalla",
 "Display Precision should have a value between 0 and 9.","Precisión de la pantalla ha de tenir un valor entre 0 i 9.",
@@ -186,15 +180,12 @@ Details,Detalls,
 Docs,,
 Documentation,Documentació,
 "Does Not Contain","No conté",
-"Don't Log Anything","No registrar",
-"Don't Log Usage","No registrar l'ús",
 "Download Update","Descarregar actualització",
 "Downloading update","Descarregant actualització",
 Dr.,,
 Draft,Esborrany,
 Duplicate,Duplicar,
 "Duplicate ${0} ${1}?","Duplicar ${0} ${1}?",
-"Duplicate Entry Error",,
 "Duties and Taxes","Deures i taxes",
 "Earnest Money","Paga i senyal",
 Edit,Editar,
@@ -202,8 +193,6 @@ Edit,Editar,
 Email,"Correu electrònic",
 "Email Address","Correu electrònic",
 Empty,Buit,
-"Enables telemetry. Does not include usage patterns.","Habilita la telemetria. No inclou patrons d'ús.",
-"Enables telemetry. Includes usage patterns.","Habilita la telemetria. Inclou els patrons d'ús.",
 "Enter Country to load States",,
 "Enter State",,
 "Entertainment Expenses","Despeses d'entreteniment",
@@ -211,7 +200,6 @@ Empty,Buit,
 "Entry Type","Tipus d'entrada",
 Equity,Capital,
 Error,Error,
-Error:,Error:,
 "Exchange Gain/Loss","Canvi de guanys/pèrdues",
 "Exchange Rate","Taxa d'intercanvi",
 "Excise Entry","Entrada d'impostos especials",
@@ -221,6 +209,7 @@ Expense,Despesa,
 Expenses,Despeses,
 "Expenses Included In Valuation","Despeses incloses en el valor",
 Export,Exportar,
+"Export Failed",,
 "Export Successful","Exportació correcta",
 Fax,Fax,
 Field,,
@@ -234,10 +223,8 @@ Filter,Filtre,
 "Fixed Assets","Actius fixes",
 Font,Font,
 For,For,
-"Forbidden Error",,
 Fraction,Fracció,
 "Fraction Units","Unitats de fracció",
-"Frappe Books uses opt-in telemetry. This is the only way for us to know if we have any consistent users. It will be really helpful if you switch it on, but we won't force you. 🙂",,
 "Freight and Forwarding Charges","Càrregues de transport i reenviaments",
 "From Account","Compte d'arribada",
 "From Date","Des de",
@@ -261,7 +248,6 @@ HSN/SAC,HSN/SAC,
 "HSN/SAC Code",,
 "Half Yearly","Mitja anual",
 "Half Years",,
-"Hello there! 👋","Hola! 👋",
 "Hex Value","Valor hexadecimal",
 "Hide Get Started","Amaga l'introducció",
 "Hide Group Amounts",,
@@ -285,7 +271,7 @@ Indigo,,
 "Indirect Income","Ingressos indirectes",
 Inflow,Entrades,
 "Install Update","Instal·lar actualització",
-Inter,,
+"Instance Id",,
 "Intergrated Tax","Taxes integrades",
 "Internal Precision","Precisió interna",
 "Invalid value ${0} for ${1}",,
@@ -312,7 +298,6 @@ Items,Elements,
 "Journal Entry","Entrada del diari",
 "Journal Entry Account",,
 Kg,,
-"Know More","Saber-ne més",
 "Label Index","Índex d'etiquetes",
 Language,Idiom,
 "Ledger Entries","Entrades del llibre de comptabilitat",
@@ -320,7 +305,6 @@ Language,Idiom,
 "Legal Expenses","Despeses al llibre de comptabilitat",
 "Less Than","Menor que",
 Liability,,
-"Link Validation Error",,
 List,,
 "Load an existing .db file from your computer.","Carrega un fitxer .db existent des del teu ordinador.",
 "Loading Report...",,
@@ -331,7 +315,6 @@ Locale,Local,
 Logo,Logotip,
 "Make Entry",,
 "Make Payment","Fer pagaments",
-"Mandatory Error",,
 "Mar 23, 2022",,
 "Marketing Expenses","Despeses de màrqueting",
 Merriweather,,
@@ -369,7 +352,6 @@ No,No,
 "No transactions yet","Encara no hi ha transaccions",
 "No updates available","No hi ha cap actualització disponible",
 None,Cap,
-"Not Found Error",,
 Notes,Notes,
 "Number Series","Sèries numèriques",
 "Number of ${0}",,
@@ -422,7 +404,6 @@ Place,Lloc,
 "Please fill all values","Empleneu tots els valors",
 "Please select a file with data to import.","Selecciona un fitxer amb les dades a importar.",
 "Please select a valid reference type.",,
-"Please select an option:","Selecciona una opció:",
 "Postal Code","Codi postal",
 "Postal Expenses","Expenses d'enviament",
 "Posting Date","Data d'enviament",
@@ -494,7 +475,6 @@ Sales,Vendes,
 "Sales Items","Artícles venuts",
 "Sales Payments",,
 Save,Guardar,
-"Save Option","Opcions de guardat",
 "Save Template","Guardar plantilla",
 "Save as PDF","Guardar com a PDF",
 "Save as PDF Successful","Guardat com a PDF correctament",
@@ -515,9 +495,7 @@ Select,,
 "Select folder","Selecciona una carpeta",
 "Select your language","Selecciona la teva llengua",
 "Selected file","Fitxer seleccionat",
-"Send anonymized usage data and error reports to help improve the product.","Envia dades d'ús anònims i informes d'error per ajudar a millorar el producte.",
 Service,Servei,
-"Set Anonymized Telemetry","Estableix la telemetria anònima",
 "Set an Import Type","Estableix un tipus d'importació",
 "Set the display language.","Estableix l'idioma de visualització.",
 "Set the local code. This is used for number formatting.","Estableix el codi local. Això s'utilitza per formatar nombres.",
@@ -532,7 +510,7 @@ Setup,Configuració,
 "Setup Complete","Configuració completa",
 "Setup Wizard","Asistent de configuració",
 "Setup Your Workspace","Configura el teu espai de treball",
-"Setup system defaults like date format and display precision","Configura els valors predeterminats del sistema com la data, el format i la visualització"
+"Setup system defaults like date format and display precision","Configura els valors predeterminats del sistema com la data, el format i la visualització",
 "Setup your company information, email, country and fiscal year",,
 "Setup your opening balances before performing any accounting entries","Configureu els saldos d'obertura abans de realitzar qualsevol entrada comptable",
 "Setup your organization","Configura la teva empresa",
@@ -628,7 +606,6 @@ Unpaid,"Per pagar",
 "Update downloaded","Actualització descarregada",
 "User Remark","Marca d'usuari",
 "Utility Expenses","Despeses de serveis",
-"Validation Error",,
 Value,Valor,
 "Value missing for ${0}","Falta el valor de ${0}",
 "Verify Imported Data","Verifica les dades importades",
