--- a/translations/de.csv
+++ b/translations/de.csv
@@ -44,13 +44,11 @@ Address,Adresse,
 "Address Line 2","Anschrift Zeile 2",
 "Administrative Expenses",Verwaltungskosten,
 All,,
-"Allow Telemetry",,
 Amount,Betrag,
 "Amount (Company Currency)","Betrag (Währung des Unternehmens)",
-"Amount: ${0} and writeoff: ${1} is less than the total amount allocated to references: ${2}.","Der Betrag: ${0} und Abschreibung: ${1} ist kleiner als der Gesamtbetrag, der den Referenzen zugeordnet ist: ${2}."
-"Amount: ${0} is less than the total amount allocated to references: ${1}.","Betrag: ${0} ist kleiner als der Gesamtbetrag, der den Referenzen zugewiesen wurde: ${1}."
+"Amount: ${0} and writeoff: ${1} is less than the total amount allocated to references: ${2}.","Der Betrag: ${0} und Abschreibung: ${1} ist kleiner als der Gesamtbetrag, der den Referenzen zugeordnet ist: ${2}.",
+"Amount: ${0} is less than the total amount allocated to references: ${1}.","Betrag: ${0} ist kleiner als der Gesamtbetrag, der den Referenzen zugewiesen wurde: ${1}.",
 "An error occurred.","Es ist ein Fehler aufgetreten.",
-"Anonymized Telemetry",,
 "Application of Funds (Assets)","Verwendung der Mittel (Aktiva)",
 Arial,,
 "Ascending Order",,
@@ -65,7 +63,6 @@ Bank,,
 "Bank Entry",,
 "Bank Name",Bankname,
 "Bank Overdraft Account",Überziehungskonto,
-"Base Error",,
 "Based On",,
 Basic,,
 "Basic I",,
@@ -81,7 +78,6 @@ Business,,
 Cancel,Stornieren,
 "Cancel ${0} ${1}?",,
 Cancelled,Storniert,
-"Cannot Commit Error",,
 "Capital Equipments",Kapitalausstattungen,
 "Capital Stock",Grundkapital,
 Cash,Bargeld,
@@ -160,7 +156,6 @@ Customise,Anpassen,
 "Customize your invoices by adding a logo and address details",,
 Dashboard,Dashboard,
 "Data Import",Datenimport,
-"Database Error",,
 "Database file: ${0}",,
 Date,Datum,
 "Date Format","Datum Format",
@@ -178,7 +173,6 @@ Description,Beschreibung,
 Details,Einzelheiten,
 "Direct Expenses","Direkte Ausgaben",
 "Direct Income","Direktes Einkommen",
-"Disables telemetry. No data will be collected, you are completely invisble to us.",,
 "Display Logo in Invoice","Logo in der Rechnung anzeigen",
 "Display Precision","Präzision anzeigen",
 "Display Precision should have a value between 0 and 9.","Die Anzeigegenauigkeit sollte einen Wert zwischen 0 und 9 haben.",
@@ -186,15 +180,12 @@ Details,Einzelheiten,
 Docs,,
 Documentation,Dokumentation,
 "Does Not Contain","Enthält nicht",
-"Don't Log Anything",,
-"Don't Log Usage",,
 "Download Update","Update herunterladen",
 "Downloading update",,
 Dr.,,
 Draft,,
 Duplicate,,
 "Duplicate ${0} ${1}?",,
-"Duplicate Entry Error",,
 "Duties and Taxes","Zölle und Steuern",
 "Earnest Money","Earnest Money",
 Edit,Bearbeiten,
@@ -202,8 +193,6 @@ Edit,Bearbeiten,
 Email,E-Mail,
 "Email Address",E-Mail-Adresse,
 Empty,Leer,
-"Enables telemetry. Does not include usage patterns.",,
-"Enables telemetry. Includes usage patterns.",,
 "Enter Country to load States",,
 "Enter State",,
 "Entertainment Expenses","Ausgaben für Unterhaltung",
@@ -211,7 +200,6 @@ Empty,Leer,
 "Entry Type","Eintrag Typ",
 Equity,Eigenkapital,
 Error,Fehler,
-Error:,Fehler:,
 "Exchange Gain/Loss",Wechselkursgewinne/-verluste,
 "Exchange Rate",Wechselkurse,
 "Excise Entry",,
@@ -221,6 +209,7 @@ Expense,Ausgaben,
 Expenses,Ausgaben,
 "Expenses Included In Valuation","In die Bewertung einbezogene Aufwendungen",
 Export,,
+"Export Failed",,
 "Export Successful","Export erfolgreich",
 Fax,Fax,
 Field,,
@@ -234,10 +223,8 @@ Filter,Filter,
 "Fixed Assets",Anlagevermögen,
 Font,Schriftart,
 For,Für,
-"Forbidden Error",,
 Fraction,Bruchteil,
 "Fraction Units","Maßeinheit Bruchteil",
-"Frappe Books uses opt-in telemetry. This is the only way for us to know if we have any consistent users. It will be really helpful if you switch it on, but we won't force you. 🙂",,
 "Freight and Forwarding Charges","Fracht- und Speditionskosten",
 "From Account","Von Konto",
 "From Date","Von Datum",
@@ -261,7 +248,6 @@ HSN/SAC,HSN/SAC,
 "HSN/SAC Code",,
 "Half Yearly",,
 "Half Years",,
-"Hello there! 👋",,
 "Hex Value",Hex-Wert,
 "Hide Get Started","Ausblenden Los geht's",
 "Hide Group Amounts",,
@@ -285,7 +271,7 @@ Indigo,,
 "Indirect Income","Indirektes Einkommen",
 Inflow,Zufluss,
 "Install Update","Update installieren",
-Inter,,
+"Instance Id",,
 "Intergrated Tax","Integrierte Steuer",
 "Internal Precision","Interne Präzision",
 "Invalid value ${0} for ${1}",,
@@ -312,7 +298,6 @@ Items,Artikel,
 "Journal Entry",Journaleintrag,
 "Journal Entry Account",,
 Kg,,
-"Know More",,
 "Label Index",,
 Language,,
 "Ledger Entries",Hauptbucheinträge,
@@ -320,7 +305,6 @@ Language,,
 "Legal Expenses",Rechtskosten,
 "Less Than","Weniger als",
 Liability,,
-"Link Validation Error",,
 List,,
 "Load an existing .db file from your computer.","Laden Sie eine vorhandene .db-Datei von Ihrem Computer.",
 "Loading Report...",,
@@ -331,7 +315,6 @@ Locale,Gebietsschema,
 Logo,Logo,
 "Make Entry",,
 "Make Payment","Zahlung vornehmen",
-"Mandatory Error",,
 "Mar 23, 2022",,
 "Marketing Expenses",Marketing-Ausgaben,
 Merriweather,,
@@ -369,7 +352,6 @@ No,Nein,
 "No transactions yet","Noch keine Transaktionen",
 "No updates available","Keine Updates verfügbar",
 None,,
-"Not Found Error",,
 Notes,Anmerkungen,
 "Number Series",Zahlenreihe,
 "Number of ${0}",,
@@ -422,7 +404,6 @@ Place,Ort,
 "Please fill all values","Bitte alle Werte ausfüllen",
 "Please select a file with data to import.",,
 "Please select a valid reference type.",,
-"Please select an option:",,
 "Postal Code",Postleitzahl,
 "Postal Expenses",Portokosten,
 "Posting Date",Buchungsdatum,
@@ -494,7 +475,6 @@ Sales,Vertrieb,
 "Sales Items",,
 "Sales Payments",,
 Save,Speichern,
-"Save Option",,
 "Save Template",,
 "Save as PDF","Als PDF speichern",
 "Save as PDF Successful","PDF gespeichert",
@@ -515,15 +495,13 @@ Select,,
 "Select folder","Ordner auswählen",
 "Select your language",,
 "Selected file",,
-"Send anonymized usage data and error reports to help improve the product.",,
 Service,Dienst,
-"Set Anonymized Telemetry",,
 "Set an Import Type",,
 "Set the display language.",,
-"Set the local code. This is used for number formatting.","Legen Sie den lokalen Code fest, der für die Formatierung der Nummern verwendet wird."
-"Sets how many digits are shown after the decimal point.","Legt fest, wie viele Ziffern nach dem Dezimalpunkt angezeigt werden."
+"Set the local code. This is used for number formatting.","Legen Sie den lokalen Code fest, der für die Formatierung der Nummern verwendet wird.",
+"Sets how many digits are shown after the decimal point.","Legt fest, wie viele Ziffern nach dem Dezimalpunkt angezeigt werden.",
 "Sets the app-wide date display format.","Legt das app-weite Datumsanzeigeformat fest.",
-"Sets the internal precision used for monetary calculations. Above 6 should be sufficient for most currencies.","Legt die interne Genauigkeit fest, die für monetäre Berechnungen verwendet wird. Ein Wert über 6 sollte für die meisten Währungen ausreichend sein."
+"Sets the internal precision used for monetary calculations. Above 6 should be sufficient for most currencies.","Legt die interne Genauigkeit fest, die für monetäre Berechnungen verwendet wird. Ein Wert über 6 sollte für die meisten Währungen ausreichend sein.",
 "Setting Up Instance",,
 "Setting Up...",Einrichten...,
 Settings,Einstellungen,
@@ -554,7 +532,7 @@ Stock,,
 "Stock Expenses","Ausgaben für Aktien",
 "Stock In Hand",Vorräte,
 "Stock Liabilities",Lagerverbindlichkeiten,
-"Stock Received But Not Billed","Erhaltener, aber nicht fakturierter Bestand"
+"Stock Received But Not Billed","Erhaltener, aber nicht fakturierter Bestand",
 Submit,Einreichen,
 "Submit Journal Entry?",,
 "Submit Purchase Invoice?",,
@@ -628,7 +606,6 @@ Unpaid,Unbezahlt,
 "Update downloaded","Update heruntergeladen",
 "User Remark","Benutzer Bemerkung",
 "Utility Expenses","Ausgaben für Versorgungsleistungen",
-"Validation Error",,
 Value,Wert,
 "Value missing for ${0}","Wert fehlt für ${0}",
 "Verify Imported Data",,
