--- a/translations/fr.csv
+++ b/translations/fr.csv
@@ -44,13 +44,11 @@ Address,Adresse,
 "Address Line 2","Ligne d'adresse 2",
 "Administrative Expenses","Dépenses administratives",
 All,,
-"Allow Telemetry",,
 Amount,Montant,
 "Amount (Company Currency)","Montant (devise de la société)",
 "Amount: ${0} and writeoff: ${1} is less than the total amount allocated to references: ${2}.","Le montant : ${0} et write-off : ${1} est inférieur au montant total alloué aux références : ${2}.",
 "Amount: ${0} is less than the total amount allocated to references: ${1}.","Montant : ${0} est inférieur au montant total alloué aux références : ${1}.",
 "An error occurred.","Une erreur s'est produite.",
-"Anonymized Telemetry",,
 "Application of Funds (Assets)","Application des fonds (actifs)",
 Arial,,
 "Ascending Order",,
@@ -65,7 +63,6 @@ Bank,,
 "Bank Entry",,
 "Bank Name","Nom de la banque",
 "Bank Overdraft Account","Compte de découvert bancaire",
-"Base Error",,
 "Based On",,
 Basic,,
 "Basic I",,
@@ -81,7 +78,6 @@ Business,,
 Cancel,Annuler,
 "Cancel ${0} ${1}?",,
 Cancelled,Annulé,
-"Cannot Commit Error",,
 "Capital Equipments","Biens d'équipement",
 "Capital Stock","Capital social",
 Cash,Espèces,
@@ -160,7 +156,6 @@ Customise,Personnalisez,
 "Customize your invoices by adding a logo and address details",,
 Dashboard,"Tableau de bord",
 "Data Import","Importation de données",
-"Database Error",,
 "Database file: ${0}",,
 Date,Date,
 "Date Format","Format de la date",
@@ -178,7 +173,6 @@ Description,Description,
 Details,Détails,
 "Direct Expenses","Dépenses directes",
 "Direct Income","Revenu direct",
-"Disables telemetry. No data will be collected, you are completely invisble to us.",,
 "Display Logo in Invoice","Affichage du logo sur la facture",
 "Display Precision","Précision de l'affichage",
 "Display Precision should have a value between 0 and 9.","La précision de l'affichage doit avoir une valeur comprise entre 0 et 9.",
@@ -186,15 +180,12 @@ Details,Détails,
 Docs,,
 Documentation,Documentation,
 "Does Not Contain","Ne contient pas",
-"Don't Log Anything",,
-"Don't Log Usage",,
 "Download Update","Télécharger la mise à jour",
 "Downloading update",,
 Dr.,,
 Draft,,
 Duplicate,,
 "Duplicate ${0} ${1}?",,
-"Duplicate Entry Error",,
 "Duties and Taxes","Droits et taxes",
 "Earnest Money","Argent de garantie",
 Edit,Modifier,
@@ -202,8 +193,6 @@ Edit,Modifier,
 Email,"Courriel :",
 "Email Address","Adresse électronique",
 Empty,Vide,
-"Enables telemetry. Does not include usage patterns.",,
-"Enables telemetry. Includes usage patterns.",,
 "Enter Country to load States",,
 "Enter State",,
 "Entertainment Expenses","Dépenses de divertissement",
@@ -211,7 +200,6 @@ Empty,Vide,
 "Entry Type","Type d'entrée",
 Equity,Actions,
 Error,Erreur,
-Error:,"Erreur :",
 "Exchange Gain/Loss","Gain/perte de change",
 "Exchange Rate","Taux de change",
 "Excise Entry",,
@@ -221,6 +209,7 @@ Expense,Dépenses,
 Expenses,Dépenses,
 "Expenses Included In Valuation","Dépenses incluses dans l'évaluation",
 Export,,
+"Export Failed",,
 "Export Successful","Exportation réussie",
 Fax,Fax,
 Field,,
@@ -234,10 +223,8 @@ Filter,Filtre,
 "Fixed Assets","Actifs fixes",
 Font,Police,
 For,Pour,
-"Forbidden Error",,
 Fraction,Fraction,
 "Fraction Units","Unités de fractionnement",
-"Frappe Books uses opt-in telemetry. This is the only way for us to know if we have any consistent users. It will be really helpful if you switch it on, but we won't force you. 🙂",,
 "Freight and Forwarding Charges","Frais de fret et d'expédition",
 "From Account","Du compte",
 "From Date","De la date",
@@ -261,7 +248,6 @@ HSN/SAC,HSN/SAC,
 "HSN/SAC Code",,
 "Half Yearly",,
 "Half Years",,
-"Hello there! 👋",,
 "Hex Value","Valeur hexagonale",
 "Hide Get Started","Cacher Commencer",
 "Hide Group Amounts",,
@@ -285,7 +271,7 @@ Indigo,,
 "Indirect Income","Revenu indirect",
 Inflow,"Arrivée d'eau",
 "Install Update","Installer la mise à jour",
-Inter,,
+"Instance Id",,
 "Intergrated Tax","Taxe intégrée",
 "Internal Precision","Précision interne",
 "Invalid value ${0} for ${1}",,
@@ -312,7 +298,6 @@ Items,Articles,
 "Journal Entry","Entrée du journal",
 "Journal Entry Account",,
 Kg,,
-"Know More",,
 "Label Index",,
 Language,,
 "Ledger Entries","Écritures de grand livre",
@@ -320,7 +305,6 @@ Language,,
 "Legal Expenses","Frais juridiques",
 "Less Than","Moins de",
 Liability,,
-"Link Validation Error",,
 List,,
 "Load an existing .db file from your computer.","Chargez un fichier .db existant sur votre ordinateur.",
 "Loading Report...",,
@@ -331,7 +315,6 @@ Locale,Locale,
 Logo,Logo,
 "Make Entry",,
 "Make Payment","Effectuer le paiement",
-"Mandatory Error",,
 "Mar 23, 2022",,
 "Marketing Expenses","Dépenses de marketing",
 Merriweather,,
@@ -369,7 +352,6 @@ No,Non,
 "No transactions yet","Aucune transaction pour le moment",
 "No updates available","Aucune mise à jour disponible",
 None,,
-"Not Found Error",,
 Notes,Notes,
 "Number Series","Série de numéros",
 "Number of ${0}",,
@@ -422,7 +404,6 @@ Place,Lieu,
 "Please fill all values","Veuillez remplir toutes les valeurs",
 "Please select a file with data to import.",,
 "Please select a valid reference type.",,
-"Please select an option:",,
 "Postal Code","Code postal",
 "Postal Expenses","Dépenses postales",
 "Posting Date","Date d'affichage",
@@ -494,7 +475,6 @@ Sales,Ventes,
 "Sales Items",,
 "Sales Payments",,
 Save,Sauvez,
-"Save Option",,
 "Save Template",,
 "Save as PDF","Enregistrer en PDF",
 "Save as PDF Successful","Enregistrer en PDF avec succès",
@@ -515,12 +495,10 @@ Select,,
 "Select folder","Sélectionner le dossier",
 "Select your language",,
 "Selected file",,
-"Send anonymized usage data and error reports to help improve the product.",,
 Service,Service,
-"Set Anonymized Telemetry",,
 "Set an Import Type",,
 "Set the display language.",,
-"Set the local code. This is used for number formatting.","Définissez le code local, il est utilisé pour le formatage des numéros."
+"Set the local code. This is used for number formatting.","Définissez le code local, il est utilisé pour le formatage des numéros.",
 "Sets how many digits are shown after the decimal point.","Définit le nombre de chiffres affichés après le point décimal.",
 "Sets the app-wide date display format.","Définit le format d'affichage de la date pour l'ensemble de l'application.",
 "Sets the internal precision used for monetary calculations. Above 6 should be sufficient for most currencies.","Définit la précision interne utilisée pour les calculs monétaires. Une précision supérieure à 6 devrait être suffisante pour la plupart des monnaies.",
@@ -628,7 +606,6 @@ Unpaid,Impayé,
 "Update downloaded","Mise à jour téléchargée",
 "User Remark","Remarque de l'utilisateur",
 "Utility Expenses","Dépenses de services publics",
-"Validation Error",,
 Value,Valeur,
 "Value missing for ${0}","Valeur manquante pour ${0}",
 "Verify Imported Data",,
