--- a/translations/pt.csv
+++ b/translations/pt.csv
@@ -44,13 +44,11 @@ Address,Endereço,
 "Address Line 2","Linha de endereço 2",
 "Administrative Expenses","Despesas administrativas",
 All,,
-"Allow Telemetry",,
 Amount,Montante,
 "Amount (Company Currency)","Quantia (Moeda da empresa)",
 "Amount: ${0} and writeoff: ${1} is less than the total amount allocated to references: ${2}.","Montante: ${0} e anulação: ${1} é menor do que o montante total atribuído às referências: ${2}.",
 "Amount: ${0} is less than the total amount allocated to references: ${1}.","Montante: ${0} é menor do que o montante total atribuído às referências: ${1}.",
 "An error occurred.","Ocorreu um erro.",
-"Anonymized Telemetry",,
 "Application of Funds (Assets)","Aplicação de Fundos (Activos)",
 Arial,,
 "Ascending Order",,
@@ -65,7 +63,6 @@ Bank,,
 "Bank Entry",,
 "Bank Name","Nome do Banco",
 "Bank Overdraft Account","Conta de descoberto bancário",
-"Base Error",,
 "Based On",,
 Basic,,
 "Basic I",,
@@ -81,7 +78,6 @@ Business,,
 Cancel,Cancelar,
 "Cancel ${0} ${1}?",,
 Cancelled,Cancelado,
-"Cannot Commit Error",,
 "Capital Equipments","Equipamentos de Capital",
 "Capital Stock","Capital social",
 Cash,Dinheiro,
@@ -160,7 +156,6 @@ Customise,Personalizar,
 "Customize your invoices by adding a logo and address details",,
 Dashboard,"Painel de instrumentos",
 "Data Import","Importação de dados",
-"Database Error",,
 "Database file: ${0}",,
 Date,Data,
 "Date Format","Formato da data",
@@ -178,7 +173,6 @@ Description,Descrição,
 Details,Detalhes,
 "Direct Expenses","Despesas directas",
 "Direct Income","Rendimento directo",
-"Disables telemetry. No data will be collected, you are completely invisble to us.",,
 "Display Logo in Invoice","Mostrar logótipo na factura",
 "Display Precision","Precisão de visualização",
 "Display Precision should have a value between 0 and 9.","Mostrar Precisão deve ter um valor entre 0 e 9.",
@@ -186,15 +180,12 @@ Details,Detalhes,
 Docs,,
 Documentation,Documentação,
 "Does Not Contain","Não Contém",
-"Don't Log Anything",,
-"Don't Log Usage",,
 "Download Update","Descarregar Actualização",
 "Downloading update",,
 Dr.,,
 Draft,,
 Duplicate,,
 "Duplicate ${0} ${1}?",,
-"Duplicate Entry Error",,
 "Duties and Taxes","Deveres e Impostos",
 "Earnest Money","Ganhar dinheiro",
 Edit,Editar,
@@ -202,8 +193,6 @@ Edit,Editar,
 Email,Email,
 "Email Address","Endereço de correio electrónico",
 Empty,Vazio,
-"Enables telemetry. Does not include usage patterns.",,
-"Enables telemetry. Includes usage patterns.",,
 "Enter Country to load States",,
 "Enter State",,
 "Entertainment Expenses","Despesas de Entretenimento",
@@ -211,7 +200,6 @@ Empty,Vazio,
 "Entry Type","Tipo de entrada",
 Equity,Equidade,
 Error,Erro,
-Error:,Erro:,
 "Exchange Gain/Loss","Ganho/perda cambial",
 "Exchange Rate","Taxa de Câmbio",
 "Excise Entry",,
@@ -221,6 +209,7 @@ Expense,Despesa,
 Expenses,Despesas,
 "Expenses Included In Valuation","Despesas Incluídas na Avaliação",
 Export,,
+"Export Failed",,
 "Export Successful","Exportação bem sucedida",
 Fax,Fax,
 Field,,
@@ -234,10 +223,8 @@ Filter,Filtro,
 "Fixed Assets","Bens fixos",
 Font,Fonte,
 For,Para,
-"Forbidden Error",,
 Fraction,Fracção,
 "Fraction Units","Unidades de Fracção",
-"Frappe Books uses opt-in telemetry. This is the only way for us to know if we have any consistent users. It will be really helpful if you switch it on, but we won't force you. 🙂",,
 "Freight and Forwarding Charges","Taxas de frete e de encaminhamento",
 "From Account","De Conta",
 "From Date","A partir de Data",
@@ -261,7 +248,6 @@ HSN/SAC,HSN/SAC,
 "HSN/SAC Code",,
 "Half Yearly",,
 "Half Years",,
-"Hello there! 👋",,
 "Hex Value","Valor hexadecimal",
 "Hide Get Started","Esconder Começar a Esconder",
 "Hide Group Amounts",,
@@ -285,7 +271,7 @@ Indigo,,
 "Indirect Income","Rendimento indirecto",
 Inflow,Influxo,
 "Install Update","Instalar Actualização",
-Inter,,
+"Instance Id",,
 "Intergrated Tax","Impostos entrelaçados",
 "Internal Precision","Precisão Interna",
 "Invalid value ${0} for ${1}",,
@@ -312,7 +298,6 @@ Items,Artigos,
 "Journal Entry","Entrada no diário",
 "Journal Entry Account",,
 Kg,,
-"Know More",,
 "Label Index",,
 Language,,
 "Ledger Entries","Entradas de Ledger",
@@ -320,7 +305,6 @@ Language,,
 "Legal Expenses","Despesas legais",
 "Less Than","Menos do que",
 Liability,,
-"Link Validation Error",,
 List,,
 "Load an existing .db file from your computer.","Carregue um ficheiro .db existente a partir do seu computador.",
 "Loading Report...",,
@@ -331,7 +315,6 @@ Locale,Locale,
 Logo,Logótipo,
 "Make Entry",,
 "Make Payment","Fazer pagamento",
-"Mandatory Error",,
 "Mar 23, 2022",,
 "Marketing Expenses","Despesas de Marketing",
 Merriweather,,
@@ -369,7 +352,6 @@ No,Não,
 "No transactions yet","Nenhuma transacção ainda",
 "No updates available","Não há actualizações disponíveis",
 None,,
-"Not Found Error",,
 Notes,Notas,
 "Number Series","Série Numérica",
 "Number of ${0}",,
@@ -422,7 +404,6 @@ Place,Lugar,
 "Please fill all values","Por favor preencha todos os valores",
 "Please select a file with data to import.",,
 "Please select a valid reference type.",,
-"Please select an option:",,
 "Postal Code","Código Postal",
 "Postal Expenses","Despesas de correio",
 "Posting Date","Data de lançamento",
@@ -494,7 +475,6 @@ Sales,Vendas,
 "Sales Items",,
 "Sales Payments",,
 Save,Guardar,
-"Save Option",,
 "Save Template",,
 "Save as PDF","Guardar como PDF",
 "Save as PDF Successful","Guardar como PDF Bem sucedido",
@@ -515,9 +495,7 @@ Select,,
 "Select folder","Seleccionar pasta",
 "Select your language",,
 "Selected file",,
-"Send anonymized usage data and error reports to help improve the product.",,
 Service,Serviço,
-"Set Anonymized Telemetry",,
 "Set an Import Type",,
 "Set the display language.",,
 "Set the local code. This is used for number formatting.","Definir o código local"," este é utilizado para a formatação de números."
@@ -541,7 +519,7 @@ Setup,Configuração,
 "Single Value",,
 "Smallest Currency Fraction Value","Menor valor de fracção da moeda",
 Softwares,"Aplicações informáticas",
-"Something has gone terribly wrong. Please check the console and raise an issue.","Algo correu terrivelmente mal. Por favor, verifique a consola e levante um problema."
+"Something has gone terribly wrong. Please check the console and raise an issue.","Algo correu terrivelmente mal. Por favor, verifique a consola e levante um problema.",
 "Source of Funds (Liabilities)","Fonte de Fundos (Passivo)",
 "Standard Chart of Accounts",,
 Start,,
@@ -628,7 +606,6 @@ Unpaid,"Não pago",
 "Update downloaded","Actualização descarregada",
 "User Remark","Observação do utilizador",
 "Utility Expenses","Despesas de utilidades",
-"Validation Error",,
 Value,Valor,
 "Value missing for ${0}","Valor em falta por ${0}",
 "Verify Imported Data",,
