fix: disgusting typo

--- a/translations/ar.csv
+++ b/translations/ar.csv
@@ -470,7 +470,7 @@ Sales,المبيعات,
 "Sales Invoice Item",,
 "Sales Invoice Settings",,
 "Sales Invoices",,
-"Sales Invoie",,
+"Sales Invoice",,
 "Sales Item Created",,
 "Sales Items","عناصر المبيعات",
 "Sales Payments",,
