--- a/translations/ca-ES.csv
+++ b/translations/ca-ES.csv
@@ -470,7 +470,7 @@ Sales,Vendes,
 "Sales Invoice Item",,
 "Sales Invoice Settings",,
 "Sales Invoices",,
-"Sales Invoie",,
+"Sales Invoice",,
 "Sales Item Created",,
 "Sales Items","Artícles venuts",
 "Sales Payments",,
