--- a/translations/es.csv
+++ b/translations/es.csv
@@ -470,7 +470,7 @@ Sales,Ventas,
 "Sales Invoice Item",,
 "Sales Invoice Settings",,
 "Sales Invoices",,
-"Sales Invoie",,
+"Sales Invoice",,
 "Sales Item Created",,
 "Sales Items","Artículos de venta",
 "Sales Payments",,
