--- a/translations/nl.csv
+++ b/translations/nl.csv
@@ -470,7 +470,7 @@ Sales,Verkopen,
 "Sales Invoice Item",,
 "Sales Invoice Settings",,
 "Sales Invoices",,
-"Sales Invoie",,
+"Sales Invoice",,
 "Sales Item Created",,
 "Sales Items",,
 "Sales Payments",,
